# SMART_HOME_PROJECT_V2.0_RASPBERRY-DEVICE

./: CMakeLists.txt  autorun.sh  build.sh  smhome.service
HWS_kernel/: CMakeLists.txt  Makefile  Makefile1  config_parser.cpp  config_parser.hpp  configs.ini  device_lib.cpp  device_lib.hpp  hws_kernel  kernel_configs.ini  main.cpp  main.hpp  modbus.cpp  modbus.hpp  poolDevicesTask.cpp  poolDevicesTask.hpp  remoteTerminalTask.cpp  remoteTerminalTask.hpp  sh_memory.cpp  sh_memory.hpp  sqlDataBaseTask.cpp  sqlDataBaseTask.hpp
HWS_terminal/: CMakeLists.txt  Makefile  device_lib.cpp  device_lib.hpp  graphic.cpp  graphic.hpp  hws_terminal  main.cpp  main.hpp  modbus.cpp  modbus.hpp  sh_memory.cpp  sh_memory.hpp
libs/: CMakeLists.txt
libs/devicelib/: CMakeLists.txt  device_lib.cpp  device_lib.hpp
libs/loglib/: CMakeLists.txt  log.hpp
libs/modbuslib/: CMakeLists.txt  modbus.hpp
libs/mysqldblib/: CMakeLists.txt  db_core.cpp  sql_db.hpp
libs/sharedmemorylib/: CMakeLists.txt  sh_memory.cpp  sh_memory.hpp
php-scripts/: post-controlpanel.php  post-gasboilercontroller.php  post-weatherstation.php  truncate-tables.php  update-tables.php
php-scripts/controlpanel/: controlpanel-data.php  get-controlpanel-1day.php  get-controlpanel-3day.php  get-controlpanel-5day.php  get-controlpanel-7day.php  post-controlpanel.php
php-scripts/gasboilercontroller/: gasboilercontroller-data.php  get-gasboilercontroller-1day.php  get-gasboilercontroller-3day.php  get-gasboilercontroller-5day.php  get-gasboilercontroller-7day.php  post-gasboilercontroller.php
php-scripts/weatherstation/: get-weatherstation-1day.php  get-weatherstation-3day.php  get-weatherstation-5day.php  get-weatherstation-7day.php  weatherstation-data.php
